# JNI-CMake-Conan-Demo

./: .gitignore  CMakeLists.txt  HelloJNI.cpp  HelloJNI.java  buildWithCMake.bat
src_cpp_lib/: CMakeLists.txt  buildWithCMake.cmd
src_java/src/: HelloJNI.java
